# LibSerialMouse

./: CMakeLists.txt  README.md
Examples/: read_write-thread.cpp
includes/: SerialMouse.h
src/: main.cpp
